@@ -14,7 +14,6 @@ import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -37,8 +36,8 @@ public class SwaggerConfiguration {
 				.apis(RequestHandlerSelectors.basePackage("com.tsp.new_tsp_front.api"))
 				.paths(PathSelectors.ant("/api/**"))
 				.build()
-				.securityContexts(Arrays.asList(securityContext()))
-				.securitySchemes(Arrays.asList(apikey()));
+				.securityContexts(List.of(securityContext()))
+				.securitySchemes(List.of(apikey()));
 	}
 
 	private ApiKey apikey() {
@@ -54,6 +53,6 @@ public class SwaggerConfiguration {
 		AuthorizationScope authorizationScope = new AuthorizationScope("global", "accessEverything");
 		AuthorizationScope[] authorizationScopes = new AuthorizationScope[1];
 		authorizationScopes[0] = authorizationScope;
-		return Arrays.asList(new SecurityReference("JWT", authorizationScopes));
+		return List.of(new SecurityReference("JWT", authorizationScopes));
 	}
 }
